<resources>
    <string name="app_name">Калькулятор эффективной дозы</string>
    <string name="head_neck">Голова и шея</string>
    <string name="head">Голова</string>
    <string name="neck">Шея или ШОП</string>
    <string name="chest">Грудная клетка или ГОП</string>
    <string name="abdomen_pelvis">Брюшная полость и/или таз, ПКОП</string>
    <string name="trunk">Грудная клетка и брюшная полость, и таз</string>
    <string name="coxae">Тазобедренные суставы и/или бедро</string>
    <string name="knee">Колено</string>
    <string name="crus">Голень и/или стопа</string>

    <string name="writing_dose">Введите значения полученных доз, mGu*cm</string>
    <string name="effective_dose">Эффективная доза, мЗв</string>
    <string name="calculate">Рассчитать</string>
    <string name="delete_values">Удалить значения</string>
    <string name="measure_dose">mGu*cm</string>
    <string name="coefficient">Коэффициент</string>
    <string name="mSv">мЗв</string>
    <string name="information_header">Информация</string>

    <string name="theme_change">Тема</string>
    <string name="light_theme">Темная тема</string>
    <string name="dark_theme">Светлая тема</string>
    <string name="system_theme">Системная тема</string>
    <string name="battery_saver_theme">Экономия при низком уровне батареи</string>

    <string name="skf">СКФ</string>
    <string name="man">Муж</string>
    <string name="woman">Жен</string>
    <string name="creatinine">Креатинин мкмоль/л</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="Age">Возраст</string>
    <string name="for_a_child">Для детей</string>
    <string name="write_new_values">Укажите новые значения</string>
    <string name="enter_creatinine">Укажите креатинин</string>
    <string name="enter_height">Укажите рост</string>
    <string name="enter_age">Укажите возраст</string>

    <string-array name="adult_or_child">
        <item>>15 лет </item>
        <item>>10–15 лет</item>
        <item>>5–10 лет</item>
        <item>>1–5 лет</item>
        <item>0–1 лет</item>
    </string-array>

    <string name="text_information">Эффективная доза облучения рассчитывается путем умножения общего DLP (произведение дозы на длину - полгощенная доза облучения за все КТ-исследование) на коэффициент пересчета, зависящий от вида КТ-исследования и возраста пациента. Используемые в приложении коэффициенты пересчета взяты из публикации Международной комиссии по радиационной защите (ICRP Publication 102).\n\n
        Для расчета эффективной дозы введите значение общего DLP (мГр*см) в строку соответствующей анатомической области и выберите интервал возраста пациента. Общий DLP - это DLP за все КТ-исследование, т. е. за все серии сканирования. Например, если выполнили КТ брюшной полости до и после внутривенного введения контрастного вещества, то необходимо взять значение total DLP из дозиметрического отчета сканера и вставить его в строку калькулятора "Брюшная полость". Если сканировали несколько анатомических областей (например, шея и грудная клетка) с разыми техническими параметрами, то необходимо вписать значение DLP для каждой области в соответствующую строку калькулятора.\n\n
        Важное замечание: эффективная доза, расчитанная с помощью калькулятора, не является индивидуальной дозой облучения конкретного пациента. В соответствии с международными руководствами и практикой, эффективную дозу расчитывают для группы пациентов средней массы тела, одного интервала возраста, для конкретных технических параметров КТ-сканирования. Таким образом, DLP и рассчитанная из него эффективная доза облучения в большей степени характеризуют технические параметры КТ-сканирования и должны использоваться для оптимизации доз облучения (технических параметров сканирования). Второе назначение эффективной дозы - сравнение с дозой облучения на других КТ-сканерах или при других видах рентгеновских и радиоизотопных исследований.\n\n
        В калькуляторе используются следующие коэффициенты пересчета:\n\n
        0-1 лет: голова и шея 0.013; голова 0.011; шея или ШОП 0.017; грудная клетка или ГОП 0.039; брюшная полость и/или таз, ПКОП 0.049; грудная клетка и брюшная полость, и таз 0.044, тазобедренные суставы и/или бедро 0,041; колено 0,0022; голень и/или стопа 0.0009.\n\n
        >1–5 лет: голова и шея 0.0085; голова 0.0067; шея или ШОП 0.012; грудная клетка или ГОП 0.026; брюшная полость и/или таз, ПКОП 0.030; грудная клетка и брюшная полость, и таз 0.028, тазобедренные суставы и/или бедро 0,028; колено 0,0012; голень и/или стопа 0,0004n\n
        >5–10 лет: голова и шея 0.0057; голова 0.0040; шея или ШОП 0.011; грудная клетка или ГОП 0.018; брюшная полость и/или таз, ПКОП 0.020; грудная клетка и брюшная полость, и таз 0.019, тазобедренные суставы и/или бедро 0,022; колено 0,0008; голень и/или стопа 0,0003.\n\n
        >10–15 лет: голова и шея 0.0042; голова 0.0032; шея или ШОП 0.0079; грудная клетка или ГОП 0.013; брюшная полость и/или таз, ПКОП 0.015; грудная клетка и брюшная полость, и таз 0.014, тазобедренные суставы и/или бедро 0,013; колено 0,0005; голень и/или стопа 0,0003.\n\n
        >15 лет: голова и шея 0.0031; голова 0.0021; шея или ШОП 0.0059; грудная клетка или ГОП 0.014; брюшная полость и/или таз, ПКОП 0.015; грудная клетка и брюшная полость, и таз 0.015, тазобедренные суставы и/или бедро 0,011; колено 0,0004; голень и/или стопа 0,0002.\n\n
        Разработчик благодарен за консультации по вопросам доз облучения при КТ врачу лучевой диагностики, к.м.н., доценту Хоружику С.А. (Минск).\n\n
        \n\n
        Для расчета СКФ у людей в возрасте 18 лет и старше используется формула CKD-EPI (мл/мин/1.73м2).\n\n
        Женщины – если креатинин крови ниже или равен 62 мкмоль/л: СКФ=144×(0,993^ЛЕТ)×((КРЕАТ/62)^(-0,329));\n\n
        Женщины – если креатинин крови выше 62 мкмоль/л: СКФ=144×(0,993^ЛЕТ)×((КРЕАТ/62)^(-1,209));\n\n
        Мужчины – если креатинин крови ниже или равен 80 мкмоль/л: СКФ=144×(0,993^ЛЕТ)×((КРЕАТ/80)^(-0,411));\n\n
        Мужчины – если креатинин крови выше 80 мкмоль/л: СКФ=144×(0,993^ЛЕТ)×((КРЕАТ/80)^(-1,209)).\n\n
        Для расчета СКФ у детей используется формула Шварца:\n\n
        СКФ=36,5*РОСТ/КРЕАТ.\n\n
    </string>

</resources>